--- a/res/css/slightbox.css
+++ b/res/css/slightbox.css
@@ -1,20 +1,9 @@
 /* Shared styles for lightbox & slimbox*/
-#overlay {
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	background-color:#000;
-	/*cursor:pointer;*/
-	z-index:90;
-}
-
 #prevLink, #nextLink {
 	display:block;
 	position:absolute;
 	top:0;
-	width:33%;
+	width:35%;
 	height:100%;
 	background:transparent url(../img/blank.gif) no-repeat; /* Trick IE into showing hover */
 }
@@ -74,6 +63,17 @@
 
 
 /* Slimbox-only*/
+#sbOverlay {
+	position:fixed;
+	left:0;
+	top:0;
+	width:100%;
+	height:100%;
+	background-color:#000;
+	cursor:pointer;
+	z-index:90;
+}
+
 #sbCenter, #sbBottomContainer {
 	position:absolute;
 	left:50%;
@@ -126,22 +126,35 @@
 }
 
 #sbPresent a {
-	color:#666;
-	margin-right:1.0em;
+	position:relative;
+	float:left;
+	color:#777;
+	border-right:0.3em solid #fff;
+	border-bottom:0.1em solid #fff;
+	border-left:0.4em solid #fff;
+	margin-right:0.2em;
 }
 
 #sbPresent a.act {
-	font-weight:bold;
+	/*font-weight:bold;*/
 	color:#fff;
 	background:#777;
-	border-right:0.2em solid #777;
-	border-bottom:0.1em solid #777;
-	border-left:0.4em solid #777;
+	border-color:#777;
 }
 
 
 
 /* Lightbox-only*/
+#overlay {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background-color:#000;
+	z-index:90;
+}
+
 #lbLightbox {
 	position:absolute;
 	left:0;
@@ -162,6 +175,8 @@
 }
 
 #lbLightbox img {
+	width:auto;
+	height:auto;
 	border:none;
 }
 
@@ -230,7 +245,7 @@
 	margin-bottom:0.1em;
 }
 
-#lbNumber {
+#lbNumberDisplay {
 	display:block;
 	margin-bottom:0.1em;
 }
@@ -241,15 +256,22 @@
 }
 
 #lbPresent a {
-	color:#666;
-	margin-right:1.0em;
+	position:relative;
+	float:left;
+	color:#777;
+	border-right:0.3em solid #fff;
+	border-bottom:0.1em solid #fff;
+	border-left:0.4em solid #fff;
+	margin-right:0.2em;
+}
+
+#lbPresent a:hover {
+	color:#000;
 }
 
 #lbPresent a.act {
-	font-weight:bold;
+	/*font-weight:bold;*/
 	color:#fff;
 	background:#777;
-	border-right:0.2em solid #777;
-	border-bottom:0.1em solid #777;
-	border-left:0.4em solid #777;
+	border-color:#777;
 }
